--- a/wrangler.toml
+++ b/wrangler.toml
@@ -27,6 +27,7 @@ binding = "R2"
 bucket_name = "newsnow"
 
 # Vectorize index for RAG (semantic search)
+# wrangler vectorize create newsnow --preset @cf/baai/bge-large-en-v1.5
 [[vectorize]]
 binding = "VECTOR_INDEX"
 index_name = "newsnow"
@@ -34,7 +35,7 @@ index_name = "newsnow"
 # Queue for article ingestion (decouples URL submission from processing)
 [[queues.producers]]
 binding = "ARTICLE_QUEUE"
-queue = "article-ingestion-queue"
+queue = "newsnow-article-ingestion"
 
 [[queues.consumers]]
 queue = "article-ingestion-queue"
@@ -57,4 +58,4 @@ script_name = "newsnow"
 # Migrations directory
 [[migrations]]
 tag = "v1"
-new_classes = ["ArticleAgent"]
+new_sqlite_classes = ["ArticleAgent"]
